deployment/mesh-infra/istio/routing/http.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: "http-virtual-service"
spec:
  gateways:
  - "teadal-gateway"
  hosts:
  - "*"
  http:
  - match:  # NOTE (1)
    - uri:
        prefix: /argocd/
    - uri:
        prefix: /argocd
    rewrite:
      uri: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
  - match:  # NOTE (2)
    - uri:
        prefix: /auth
    route:
    - destination:
        host: keycloak.default.svc.cluster.local
        port:
          number: 8080

# NOTE
# 1. URL rewriting. We use overlapping prefixes to make sure `/x`, `/x/`
# and `/x/p` get rewritten to `/`, `/` and `/p` respectively. Istio will
# moan about it, e.g.
#
#   Warning: virtualService rule #3 match #0 of prefix /argocd/ is not used
#           (duplicate/overlapping match in rule #1 of prefix /argocd on #3)
#
# But if you take out either URI prefix match, things will break---e.g.
# try navigating to the Argo CD UI.
# See:
# - https://github.com/istio/istio/issues/8076
#
# 2. Keycloak base path. Keycloak is configured with a `web-context`
# of `auth`, which makes every URL in the UI is relative to `/auth`.
# So we don't need a rewrite rule in this case.
#
